# agent-core

./: .gitignore
Nucleus-Development/: README.md  build-all.sh  clean-all.sh
Nucleus-Development/agent-core/: ARCHITECTURE.md  CMakeLists.txt  README.md  vcpkg.json
Nucleus-Development/agent-core/cmake/: FindZeroMQ.cmake
Nucleus-Development/agent-core/config/: dev.json  example.json  identity.json.example  identity.schema.json
Nucleus-Development/agent-core/include/agent/: auth_manager.hpp  bus.hpp  config.hpp  envelope_json.hpp  envelope_serialization.hpp  extension_manager.hpp  https_client.hpp  identity.hpp  log_throttler.hpp  mqtt_client.hpp  net_path_selector.hpp  path_utils.hpp  quota_enforcer.hpp  registration.hpp  resource_monitor.hpp  restart_manager.hpp  restart_state_store.hpp  retry.hpp  service_host.hpp  service_installer.hpp  telemetry.hpp  telemetry_cache.hpp  telemetry_collector.hpp  uuid.hpp  version.hpp
Nucleus-Development/agent-core/manifests/: extensions.json
Nucleus-Development/agent-core/packaging/linux/: agent-core.service
Nucleus-Development/agent-core/packaging/windows/: agent-core.service.ps1
Nucleus-Development/agent-core/scripts/: build-msvc.ps1  build.sh  clean.sh  dev-run.sh
Nucleus-Development/agent-core/src/: main.cpp
Nucleus-Development/agent-core/src/auth/: auth_manager.cpp
Nucleus-Development/agent-core/src/bus/: envelope_serialization.cpp  zmq_bus.cpp
Nucleus-Development/agent-core/src/config/: config_json.cpp
Nucleus-Development/agent-core/src/ext/: extension_manager.cpp  extension_manifest.cpp
Nucleus-Development/agent-core/src/identity/: identity.cpp
Nucleus-Development/agent-core/src/mqtt/: mqtt_client.cpp
Nucleus-Development/agent-core/src/net/: https_client.cpp  net_path_selector.cpp
Nucleus-Development/agent-core/src/reg/: registration_ssm.cpp
Nucleus-Development/agent-core/src/res/: quota_enforcer.cpp  resource_monitor.cpp
Nucleus-Development/agent-core/src/service/: restart_manager.cpp  restart_state_store.cpp  service_host_linux.cpp  service_host_win.cpp  service_installer_linux.cpp  service_installer_win.cpp
Nucleus-Development/agent-core/src/telemetry/: log_throttler.cpp  logging.cpp  metrics.cpp  telemetry_cache.cpp  telemetry_collector.cpp
Nucleus-Development/agent-core/src/util/: path_utils.cpp  retry.cpp  uuid.cpp
Nucleus-Development/agent-core/tests/: CMakeLists.txt  test_stubs.cpp
Nucleus-Development/agent-core/tests/config/: test_extensions.json
Nucleus-Development/agent-core/tests/integration/: test_auth.cpp  test_extension_lifecycle.cpp  test_identity.cpp  test_logging_throttling.cpp  test_restart_quarantine.cpp  test_service_installer.cpp  test_ssm_registration.cpp  test_telemetry.cpp  test_zmq.cpp  test_zmq_load.cpp
Nucleus-Development/agent-core/tests/unit/: test_bus.cpp  test_extension_manager.cpp  test_health_format.cpp  test_log_throttler.cpp  test_logging.cpp  test_quota_enforcer.cpp  test_restart_manager.cpp  test_retry_metrics.cpp
Nucleus-Development/agent-core/tools/: health_query.cpp
Nucleus-Development/extensions/ps-exec/: CMakeLists.txt  README.md
Nucleus-Development/extensions/ps-exec/src/: main.cpp
Nucleus-Development/extensions/sample/: CMakeLists.txt  main.cpp
Nucleus-Development/extensions/tunnel/: CMakeLists.txt  README.md
Nucleus-Development/extensions/tunnel/src/: main.cpp
